# python-learning

./: .gitignore  pyproject.toml
src/python_learning/: Lesson10-Multiprocessing.py  Lesson10_pydantic.py  Lesson11_Dataclass.py  Lesson2.py  Lesson3-Collections.py  Lesson3-Comprehensions.py  Lesson3-TradeProcessing.py  Lesson4-Functions-Part2.py  Lesson4-Functions.py  Lesson5-Classes.py  Lesson6-Errors.py  Lesson7-ClaudeTest.py  Lesson8-Decorator.py  Lesson9-Asyncio.py
