[project]
name = "python-learning"
version = "0.1.0"
description = ""
authors = [
    {name = "ritesh",email = "ritesh.sonawala@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "anthropic (>=0.84.0,<0.85.0)"

]

[tool.poetry]
packages = [{include = "python_learning", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
